Rename project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "win-search",
+  "name": "meow-twist",
   "author": "Jaycen",
   "version": "1.2.0",
   "description": "A minimal Spotlight-like launcher built with Electron",
